--- a/API_Conexao_Android-master/app/src/main/res/layout/activity_buscar.xml
+++ b/API_Conexao_Android-master/app/src/main/res/layout/activity_buscar.xml
@@ -59,18 +59,12 @@
                         android:text="@string/tb_nome"
                         android:layout_weight="10"
                         />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/tb_endereco"
-                        android:layout_weight="6"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/tb_telefone"
-                        android:layout_weight="6"
-                        />
+                        android:layout_weight="10"
+                        android:text="@string/tb_sobrenome" />
                 </TableRow>
 
             </TableLayout>
